@@ -86,6 +86,7 @@ sys-apps/lesspipe:fastjar - Support jar files with app-arch/fastjar
 sys-apps/lesspipe:ghostscript - Support ps files with app-text/ghostscript-gpl; ignored if pstotext is set
 sys-apps/lesspipe:gpg - Support gpg files
 sys-apps/lesspipe:groff - Support man and nroff files
+sys-apps/lesspipe:hdf5 - Support h5dump from sci-libs/hdf5
 sys-apps/lesspipe:html2text - Support html files with app-text/html2text; this overrides links, lynx, elinks, w3m
 sys-apps/lesspipe:id3v2 - Support mp3 files with media-sound/id3v2; this overrides mp3info2, mp3info
 sys-apps/lesspipe:image - Support image/jpg files
@@ -96,6 +97,7 @@ sys-apps/lesspipe:lynx - Support html files with www-client/lynx; ignored if htm
 sys-apps/lesspipe:lzip - Support lzip files
 sys-apps/lesspipe:mp3info - Support mp3 files with media-sound/mp3info; unused if id3v2 or mp3info2 is set
 sys-apps/lesspipe:mp3info2 - Support mp3 files with dev-perl/MP3-Tag (mp3info2); ignored if id3v2 is set; this overrides mp3info
+sys-apps/lesspipe:netcdf - Support ncdump from sci-libs/netcdf
 sys-apps/lesspipe:ooffice - Support OpenOffice files
 sys-apps/lesspipe:p7zip - Support p7zip files
 sys-apps/lesspipe:pdf - Support pdf files
