@@ -1,1 +1,1 @@
-DIST lesspipe-1.82.tar.gz 112854 SHA256 3fd345b15d46cc8fb0fb1d625bf8d881b0637abc34d15df45243fd4e5a8f4241 SHA512 6dd5f5e00755b7284d0867eca6e9f815a2cee38dcba3fd632f29f420e6295e1a7505bab4b8461f5f88d75fc5495af97c5ebdc815d2d46850247e6289a181130d WHIRLPOOL b236a07d1867e50d01502014f12f93322d1d87aa46c630ad1b4393f129ed9f63f42e085ae8e1e6bb164ace06f19e407528af99d4e466b061e24ab38e38b39059
+DIST lesspipe-1.83.tar.gz 115129 SHA256 d616f0d51852e60fb0d0801eec9c31b10e0acc6fdfdc62ec46ef7bfd60ce675e SHA512 c6418ac2bfc2dee9d32d56b0ea4a94954b1431db54fef8b67a9cf7d961cf4a23d87b2f41b2a4560d2333029c6d4ed5c6f399cb635f857bd43f1603993b5cb55d WHIRLPOOL 4ff4baac25c768a4177d71a82f766b326cff6840e0032d6b9125506de38ff20264b71c765cb08777adda9e9f24e18e33e452667be8e7a94f7fef062f1d6f019f
