@@ -18,6 +18,7 @@
 		<flag name="ghostscript">Support ps files with app-text/ghostscript-gpl; ignored if pstotext is set</flag>
 		<flag name="gpg">Support gpg files</flag>
 		<flag name="groff">Support man and nroff files</flag>
+		<flag name="hdf5">Support h5dump from sci-libs/hdf5</flag>
 		<flag name="html2text">Support html files with app-text/html2text; this overrides links, lynx, elinks, w3m</flag>
 		<flag name="id3v2">Support mp3 files with media-sound/id3v2; this overrides mp3info2, mp3info</flag>
 		<flag name="image">Support image/jpg files</flag>
@@ -28,6 +29,7 @@
 		<flag name="lzip">Support lzip files</flag>
 		<flag name="mp3info">Support mp3 files with media-sound/mp3info; unused if id3v2 or mp3info2 is set</flag>
 		<flag name="mp3info2">Support mp3 files with dev-perl/MP3-Tag (mp3info2); ignored if id3v2 is set; this overrides mp3info</flag>
+		<flag name="netcdf">Support ncdump from sci-libs/netcdf</flag>
 		<flag name="ooffice">Support OpenOffice files</flag>
 		<flag name="p7zip">Support p7zip files</flag>
 		<flag name="pdf">Support pdf files</flag>
